* Continuing initial build.

--- a/app/one-tab.html
+++ b/app/one-tab.html
@@ -111,6 +111,7 @@
         <script src="bower_components/angular-ui-indeterminate/dist/indeterminate.js"></script>
         <script src="bower_components/angular-ui-uploader/dist/uploader.js"></script>
         <script src="bower_components/angular-ui-utils/index.js"></script>
+        <script src="bower_components/angular-messages/angular-messages.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
