--- a/app/options.html
+++ b/app/options.html
@@ -3,6 +3,7 @@
     <head>
         <!-- build:css styles/vendor.css -->
         <!-- bower:css -->
+        <link rel="stylesheet" href="bower_components/ng-inline-edit/dist/ng-inline-edit.css" />
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css styles/main.css -->
@@ -40,6 +41,7 @@
         <script src="bower_components/angular-ui-uploader/dist/uploader.js"></script>
         <script src="bower_components/angular-ui-utils/index.js"></script>
         <script src="bower_components/angular-messages/angular-messages.js"></script>
+        <script src="bower_components/ng-inline-edit/dist/ng-inline-edit.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
